[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-transcript-util"
version = "0.1.0"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
description = "A Python utility for downloading YouTube transcripts in bulk"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["youtube", "transcript", "api", "bulk-download"]
dependencies = [
    "requests",
    "python-dotenv",
    "youtube-transcript-api",
    "yt-dlp",
    "openai",
    "click",
    "rich",
    "tqdm",
]

[project.urls]
Homepage = "https://github.com/Skeletonboi/yt-transcript-util"
Repository = "https://github.com/Skeletonboi/yt-transcript-util"
Issues = "https://github.com/Skeletonboi/yt-transcript-util/issues"

[project.scripts]
yt-transcript = "yt_transcript_util.yt_transcript:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["yt_transcript_util*"]

[tool.setuptools.package-dir]
yt_transcript_util = "."
