[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yt_transcript_util"
version = "1.0.0"
authors = [
    {name = "Victor Yip", email = "yp.victor@outlook.com"},
]
description = "A Python utility for downloading transcripts in bulk from a Youtube channel or from an individual video."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
keywords = ["youtube", "transcript", "api", "bulk-download", "scraper", "video scraper"]
dependencies = [
    "wheel>=0.45.1",
    "playwright>=1.48.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.4",
]


[project.urls]
"Homepage" = "https://github.com/Skeletonboi/yt-transcript-util"
"Issues" = "https://github.com/Skeletonboi/yt-transcript-util/issues"

[project.scripts]
yt-transcript = "yt_transcript_util.yt_transcript:main"

[tool.setuptools.packages.find]
include = ["yt_transcript_util"]